tests/invalid/type/manual_ex005.pts
function main() : void {
    // invalide : `null` n'est pas une valeur du langage
    string s = null; // Erreur : E2001 UNRESOLVED_NAME
}
